feat(empty piggy): show message when piggybank is full, and add functions that can help emptying it

--- a/innhold.html
+++ b/innhold.html
@@ -5,17 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./utseende/generelt-utseende.css" />
-    <link rel="stylesheet" href="./utseende/putt-på-penger-knapper.css" />
-    <link rel="stylesheet" href="./utseende/du-har-spart-tekst.css" />
-    <script src="./funksjonalitet/putt-på-penger.js" defer></script>
+    <link rel="stylesheet" href="./utseende/putt-pa-penger-knapper.css" />
+    <link rel="stylesheet" href="./utseende/spareinformasjon.css" />
+    <script src="./funksjonalitet/putt-pa-penger.js" defer></script>
     <title>Min digitale sparegris</title>
   </head>
   <body>
     <h1>Min digitale sparegris</h1>
 
-    <section id="du-har-spart-tekst">
+    <section id="spareinformasjon">
       <h2>Du har spart</h2>
       <h2 id="sparesum">0 kroner</h2>
+      <article id="full-sparebosse-varsel">
+        <p id="full-sparebosse-tekst">
+          Det er ikke plass til så mye mer penger i sparebøssen
+        </p>
+        <button id="tom-sparebossen-knapp">Tøm sparebossen</button>
+      </article>
     </section>
 
     <section id="bilde-av-sparebosse">
