style(body and flex): fix minor styling issues

--- a/innhold.html
+++ b/innhold.html
@@ -15,21 +15,22 @@
 
 <!DOCTYPE html>
 <html lang="no">
-  <!--Denne delen trenger du ikke å tenke på nå, hopp rett ned til der det står <body>-->
+  <!--Denne delen trenger du ikke å tenke på i starten, hopp rett ned til der det står <body>-->
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./utseende/skrifttyper.css" />
+    <!--Her lager vi koblinger til filene som definerer hvordan siden skal se ut: css-filene-->
     <link rel="stylesheet" href="./utseende/generelt-utseende.css" />
     <link rel="stylesheet" href="./utseende/putt-pa-penger-knapper.css" />
     <link rel="stylesheet" href="./utseende/spareinformasjon.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap"
-      rel="stylesheet"
-    />
-    />
+
+    <!--Her lager vi koblinger til filene som lager funksjonaliteten: javascriptfilene-->
     <script src="./funksjonalitet/putt-pa-penger.js" defer></script>
+
+    <!--Her kan du lime inn lenker til skrifttyper-->
+    <!--...-->
+    <!--Denne teksten vises i fanen i nettleseren din-->
     <title>Min digitale sparegris</title>
   </head>
 
@@ -55,8 +56,9 @@
       <svg
         data-name="Sparegris"
         xmlns="http://www.w3.org/2000/svg"
-        width="512.481"
-        height="405.201"
+        width="100%"
+        height="100%"
+        viewbox="0 0 512.481 405.201"
       >
         <g data-name="hele-grisen">
           <path
