--- a/innhold-utgangspunkt.html
+++ b/innhold-utgangspunkt.html
@@ -4,26 +4,33 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="utseende.css" />
-    <script src="./funksjonalitet/legg-til-belop.js" defer></script>
-    <title>Min digitale sparegris</title>
+    <!--Her lager vi koblinger til filene som definerer hvordan siden skal se ut: css-filene-->
+    <link rel="stylesheet" href="./utseende/generelt-utseende.css" />
+    <link rel="stylesheet" href="./utseende/putt-pa-penger-knapper.css" />
+    <link rel="stylesheet" href="./utseende/spareinformasjon.css" />
+
+    <!--Her lager vi koblinger til filene som lager funksjonaliteten: javascriptfilene-->
+    <script src="./funksjonalitet/putt-pa-penger.js" defer></script>
+
+    <!--Her kan du lime inn lenker til skrifttyper-->
+    <!--...-->
+    <!--Denne teksten vises i fanen i nettleseren din-->
+    <title>Min digitale sparegris U</title>
   </head>
   <body>
-    <div id="app">
-      <h1>Min digitale sparegris</h1>
-      <div id="du-har-spart-tekst">
-        <h2>Du har spart</h2>
-        <h2 id="sparesum">0 kroner</h2>
-      </div>
-      <div id="bilde-av-sparebosse">
-        <!--Lim inn koden til den sparegrisen du vil ha her ⤵ -->
-      </div>
-      <div id="putt-på-penger-knapper">
-        <button id="putt-på-penger-knapp-1">1 kr</button>
-        <button id="putt-på-penger-knapp-2">5 kr</button>
-        <button id="putt-på-penger-knapp-3">10 kr</button>
-        <button id="putt-på-penger-knapp-4">15 kr</button>
-      </div>
+    <h1>Min digitale sparegris</h1>
+    <div id="du-har-spart-tekst">
+      <h2>Du har spart</h2>
+      <h2 id="sparesum">0 kroner</h2>
+    </div>
+    <div id="bilde-av-sparebosse">
+      <!--Lim inn koden til den sparegrisen du vil ha her ⤵ -->
+    </div>
+    <div id="putt-på-penger-knapper">
+      <button id="putt-på-penger-knapp-1">1 kr</button>
+      <button id="putt-på-penger-knapp-2">5 kr</button>
+      <button id="putt-på-penger-knapp-3">10 kr</button>
+      <button id="putt-på-penger-knapp-4">15 kr</button>
     </div>
   </body>
 </html>
