fix(sparegris): always use sparebosse in stead of sparegris in text

--- a/hva-skal-nettsiden-inneholde.html
+++ b/hva-skal-nettsiden-inneholde.html
@@ -36,23 +36,23 @@
 
     <!--Her lager vi koblinger til filene som lager funksjonaliteten: javascriptfilene-->
     <script
-      src="./hva-skal-skje-på-nettsiden-(javascript)/putt-pa-penger.js"
+      src="./hva-skal-skje-paa-nettsiden-(javascript)/putt-pa-penger.js"
       defer
     ></script>
     <script
-      src="./hva-skal-skje-på-nettsiden-(javascript)/full-sparegris.js"
+      src="./hva-skal-skje-paa-nettsiden-(javascript)/full-sparebosse.js"
       defer
     ></script>
 
     <!--Her kan du lime inn lenker til flere skrifttyper-->
 
     <!--Denne teksten vises i fanen i nettleseren din-->
-    <title>Min digitale sparegris</title>
+    <title>Min digitale sparebøsse</title>
   </head>
 
   <body>
     <!--OVERSKRIFT-->
-    <h1>Min digitale sparegris</h1>
+    <h1>Min digitale sparebøsse</h1>
 
     <!--DEL 1: informasjon om hvor mye du har spart (og at sparebøssa er full, hvis du vil vise det)-->
     <section id="spareinformasjon">
